--- a/_sass/hydeout/_base.scss
+++ b/_sass/hydeout/_base.scss
@@ -25,11 +25,11 @@ html {
 }
 
 body {
-  color: $body-color;
-  background-color: $body-bg;
   -webkit-text-size-adjust: 100%;
       -ms-text-size-adjust: 100%;
 }
+
+main, article, section { display: block; }
 
 // No `:visited` state is required by default (browsers will use `a`)
 a {
@@ -52,20 +52,22 @@ img {
   max-width: 100%;
   margin: 0 0 1rem;
   border-radius: 5px;
+  height: auto; // Fix to keep max-width from squishing images with defined
+                // height in HTML
 }
 
 table {
   margin-bottom: 1rem;
   width: 100%;
   font-size: 85%;
-  border: 1px solid #e5e5e5;
+  border: 1px solid $border-color;
   border-collapse: collapse;
 }
 
 td,
 th {
   padding: .25rem .5rem;
-  border: 1px solid #e5e5e5;
+  border: 1px solid $border-color;
 }
 
 th {
@@ -74,5 +76,28 @@ th {
 
 tbody tr:nth-child(odd) td,
 tbody tr:nth-child(odd) th {
-  background-color: #f9f9f9;
+  background-color: $gray-1;
+}
+
+input[type="text"], input[type="email"], input[type="search"], input[type="submit"], button {
+  padding: $padding-v $padding-h;
+  border: 1px solid $border-color;
+  border-radius: $border-radius;
+}
+
+button, input[type="submit"] {
+  cursor: pointer;
+  background: transparent;
+  border-color: $border-color;
+  color: $link-color;
+  transition: color 0.6s ease-in-out,
+              border-color 0.6s ease-in-out,
+              background 0.6s ease-in-out;
+
+  &:hover {
+    background: $link-color;
+    border-color: $link-color;
+    color: white;
+    box-shadow: $default-box-shadow;
+  }
 }
