--- a/_includes/custom-icon-links.html
+++ b/_includes/custom-icon-links.html
@@ -1,1 +1,31 @@
-<!-- Optional additional links to insert for icons links -->
+{% if tags_page %}
+<a id="email-link"
+    class="icon" title="Email" aria-label="Email"
+    href="mailto:{{ site.email }}">
+  {% include svg/email.svg %}
+</a>
+{% endif %}
+
+{% if tags_page %}
+  <a id="github-link"
+     class="icon" title="Github" aria-label="Github"
+     href="https://github.com/azkh93">
+    {% include svg/github.svg %}
+  </a>
+{% endif %}
+
+{% if tags_page %}
+  <a id="twitter-link"
+     class="icon" title="Twitter" aria-label="Twitter"
+     href="https://twitter.com/azhar937">
+    {% include svg/twitter.svg %}
+  </a>
+{% endif %}
+
+{% if tags_page %}
+  <a id="linkedin-link"
+     class="icon" title="LinkedIn" aria-label="LinkedIn"
+     href="https://www.linkedin.com/in/azhar93/">
+    {% include svg/linkedin.svg %}
+  </a>
+{% endif %}
