Site-wide modifications

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,5 +12,8 @@
     </main>
 
     {% include custom-foot.html %}
+    {% if site.google_analytics and jekyll.environment == 'production' %}
+    {% include google-analytics.html %}
+    {% endif %}
   </body>
 </html>
