--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -2,7 +2,7 @@
 # Use a comment to ensure Jekyll reads the file to be transformed into CSS later
 # only main files contain this front matter, not partials.
 ---
-$sidebar-bg-color: #453A6D;
+$sidebar-bg-color: #67727B;
 $link-color: #B71C1C;
 $sidebar-sticky: true;
 $layout-reverse: false;
