--- a/_includes/custom-icon-links.html
+++ b/_includes/custom-icon-links.html
@@ -9,7 +9,7 @@
 {% if tags_page %}
   <a id="github-link"
      class="icon" title="Github" aria-label="Github"
-     href="https://github.com/azkh93">
+     href="https://github.com/zeddmaxx">
     {% include svg/github.svg %}
   </a>
 {% endif %}
@@ -17,7 +17,7 @@
 {% if tags_page %}
   <a id="twitter-link"
      class="icon" title="Twitter" aria-label="Twitter"
-     href="https://twitter.com/azhar937">
+     href="https://twitter.com/zeddmaxx">
     {% include svg/twitter.svg %}
   </a>
 {% endif %}
@@ -25,7 +25,7 @@
 {% if tags_page %}
   <a id="linkedin-link"
      class="icon" title="LinkedIn" aria-label="LinkedIn"
-     href="https://www.linkedin.com/in/azhar93/">
+     href="https://www.linkedin.com/in/zoya19/">
     {% include svg/linkedin.svg %}
   </a>
 {% endif %}
