--- a/_sass/hydeout/_layout.scss
+++ b/_sass/hydeout/_layout.scss
@@ -23,7 +23,7 @@
 */
 
 body {
-  color: $sidebar-text-color;
+  color: #151714;
   background-color: $sidebar-bg-color;
   background-image: linear-gradient(
     to bottom,
