--- a/_sass/hydeout/_layout.scss
+++ b/_sass/hydeout/_layout.scss
@@ -83,7 +83,7 @@ body {
 
 // Make header elements blend into sidebar / background
 .container > header {
-  color: $sidebar-title-color;
+  color: #151714;
   background: transparent;
   margin: ($heading-spacing - $section-spacing)
           $section-spacing
