--- a/_sass/hydeout/_variables.scss
+++ b/_sass/hydeout/_variables.scss
@@ -50,7 +50,7 @@ $sidebar-fg-color: white !default;
 $sidebar-sticky: true !default;
 $layout-reverse: false !default;
 
-$sidebar-title-color: $sidebar-fg-color !default;
-$sidebar-link-color: $sidebar-fg-color !default;
-$sidebar-text-color: rgba($sidebar-fg-color, 0.75) !default;
-$sidebar-icon-color: rgba($sidebar-fg-color, 0.85) !default;
+$sidebar-title-color: #151714 !default;
+$sidebar-link-color: #151714 !default;
+$sidebar-text-color: rgba(#151714, 0.75) !default;
+$sidebar-icon-color: rgba(#151714, 0.85) !default;
