--- a/_sass/hydeout/_variables.scss
+++ b/_sass/hydeout/_variables.scss
@@ -45,8 +45,8 @@ $code-font-family: Menlo, Monaco, "Courier New", monospace !default;
 $code-color: #bf616a !default;
 
 // Hyde theming
-$sidebar-bg-color: #202020 !default;
-$sidebar-fg-color: white !default;
+$sidebar-bg-color: #ebf6db; !default;
+$sidebar-fg-color: #ebf6db !default;
 $sidebar-sticky: true !default;
 $layout-reverse: false !default;
 
