--- a/_sass/hydeout/_variables.scss
+++ b/_sass/hydeout/_variables.scss
@@ -46,7 +46,7 @@ $code-color: #bf616a !default;
 
 // Hyde theming
 $sidebar-bg-color: #ebf6db; !default;
-$sidebar-fg-color: #ebf6db !default;
+$sidebar-fg-color: #ebf6db; !default;
 $sidebar-sticky: true !default;
 $layout-reverse: false !default;
 
