--- a/_sass/hydeout/_layout.scss
+++ b/_sass/hydeout/_layout.scss
@@ -179,7 +179,7 @@ body {
 
   // Make entire container background white to contrast against sidebar
   .container {
-    background: $body-bg;
+    background: #ebf6db;
     color: $body-color;
     padding: $section-spacing * 2
              $section-spacing * 2
