--- a/_sass/hydeout/_layout.scss
+++ b/_sass/hydeout/_layout.scss
@@ -42,7 +42,7 @@ body {
   .site-title {
     font-family: "Abril Fatface", serif;
     font-weight: normal;
-    font-size: $large-font-size;
+    font-size: 17pt;
     margin-top: 0;
     margin-bottom: $heading-spacing;
 
