--- a/_includes/custom-icon-links.html
+++ b/_includes/custom-icon-links.html
@@ -15,6 +15,16 @@
 {% endif %}
 
 {% if tags_page %}
+  <a id="quora-link"
+     class="icon" title="Quora" aria-label="Quora"
+     href="https://www.quora.com/profile/Zoya-Khan-53">
+    {% include svg/quora.svg %}
+  </a>
+{% endif %}
+
+
+
+{% if tags_page %}
   <a id="twitter-link"
      class="icon" title="Twitter" aria-label="Twitter"
      href="https://twitter.com/zeddmaxx">
