--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -4,6 +4,7 @@
 ---
 $sidebar-bg-color: #80b3ff;
 $link-color: #B71C1C;
+$body-color:  #f2f2f2;
 $sidebar-sticky: true;
 $layout-reverse: false;
 @import "hydeout";
