Updating site wide  background color

--- a/_sass/hydeout/_layout.scss
+++ b/_sass/hydeout/_layout.scss
@@ -63,7 +63,7 @@ body {
 }
 
 .content {
-  background: #ebf6db;
+  background: #ffffff;
   color: $body-color;
   padding: $section-spacing;
 }
@@ -179,7 +179,7 @@ body {
 
   // Make entire container background white to contrast against sidebar
   .container {
-    background: #ebf6db;
+    background: #ffffff;
     color: $body-color;
     padding: $section-spacing * 2
              $section-spacing * 2
