Updating side bar

--- a/_includes/sidebar-icon-links.html
+++ b/_includes/sidebar-icon-links.html
@@ -1,5 +1,5 @@
 <nav id="sidebar-icon-links">
-<!--   {% if site.hydeout.repo %}
+  {% if site.hydeout.repo %}
     <a id="github-link"
        class="icon" title="Github Project" aria-label="Github Project"
        href="{{ site.hydeout.repo }}">
@@ -11,7 +11,7 @@
       {% include svg/download.svg %}
     </a>
   {% endif %}
- -->
+ 
   
 
   {% include custom-icon-links.html %}
